hphp/test/zend/bad/ext/standard/tests/strings/bug54332.php
<?php
echo number_format(1e300, 2006, '', ' ') . "\n";
?>